# gnome-mime-data

./: .cvsignore  .gitignore  AUTHORS  CVS_COMMITS  ChangeLog  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  check-mime.pl  configure  configure.in  gnome-mime-data.spec.in  gnome-vfs-mime-magic  gnome-vfs.applications  gnome-vfs.keys.in  gnome-vfs.mime  index.html  params.json  project.config
icons/: Makefile.am
man/: .gitignore  Makefile.in
po/: .cvsignore  ChangeLog  am.po  ar.po  az.po  be.po  bg.po  bn.po  ca.po  cs.po  cy.po  da.po  de.po  el.po  en_CA.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  ko.po  li.po  lt.po  lv.po  mk.po  ml.po  mn.po  ms.po  (+30 more)
