AC_INIT(check-mime.pl)

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(gnome-mime-data, 1.9.2)

AM_MAINTAINER_MODE

GNOME_COMMON_INIT

AC_PROG_INTLTOOL

#ORBIT_IDL="`$PKG_CONFIG --variable=orbit_idl ORBit-2.0`"
#AC_SUBST(ORBIT_IDL)

#GETTEXT_PACKAGE=gnome-mime-data-2.0
#AC_SUBST(GETTEXT_PACKAGE)
#AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE")

ALL_LINGUAS="az ca da de el es fi fr ga gl hu it ja ko lt nl nn no pl pt_BR ro ru sk sl sv tr uk wa zh_TW"
AM_GLIB_GNU_GETTEXT

AC_OUTPUT([
Makefile
gnome-mime-data.spec
po/Makefile.in
gnome-mime-data-2.0.pc
])
