AC_INIT(check-mime.pl)

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(gnome-mime-data, 1.0.0)

AM_MAINTAINER_MODE

AM_PROG_XML_I18N_TOOLS

GNOME_COMMON_INIT
GNOME_REQUIRE_PKGCONFIG
echo "Trying to autodetect GNOME Platform; give configure the --enable-platform-gnome-2 or --disable-platform-gnome-2 argument to override."
$PKG_CONFIG --exists glib-2.0 > /dev/null 2>&1
if test $? == 0 ; then
  autodetected_gnome_2=yes
  echo "Autodetected GNOME 2.0 Platform."
else
  autodetected_gnome_2=no
  echo "Autodetected GNOME 1.x Platform."
fi

GNOME_PLATFORM_GNOME_2($autodetected_gnome_2)

AC_PROG_INTLTOOL

GETTEXT_PACKAGE=gnome-mime-data
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE")

ALL_LINGUAS="az ca da de el es fi fr ga gl hu it ja ko lt nl nn no pl pt_BR ro ru sk sl sv tr uk wa zh_TW"
AM_GNOME2_GETTEXT

AC_OUTPUT([
Makefile
gnome-mime-data.spec
po/Makefile.in
gnome-mime-data-2.0.pc
])
