AC_INIT(check-mime.pl)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(gnome-mime-data, 2.4.1)

AM_MAINTAINER_MODE

AC_PROG_INTLTOOL

ALL_LINGUAS="af am ar az be bg bn bs ca cs cy da de el en_CA en_GB eo es et eu fa fi fr ga gl gu he hi hr hu id is it ja ko li lt lv mk ml mn ms nb ne nl nn no pa pl pt pt_BR ro ru sk sl sq sr sr@ije sr@Latn sv ta th tk tr uk vi wa yi zh_CN zh_TW"
GETTEXT_PACKAGE=gnome-mime-data
AC_SUBST(GETTEXT_PACKAGE)
AM_GLIB_GNU_GETTEXT

AC_OUTPUT([
Makefile
gnome-mime-data.spec
man/Makefile
man/gnome-vfs-mime.5
po/Makefile.in
gnome-mime-data-2.0.pc
])
