NULL=

icondir = $(datadir)/pixmaps/document-icons/

icon_DATA =\
	gnome-application-encapsulated_postscript.png \
	gnome-application-msword.png \
	gnome-application-pdf.png \
	gnome-application-pgp.png \
	gnome-application-postscript.png \
	gnome-application-qif.png \
	gnome-application-rtf.png \
	gnome-application-smil.png \
	gnome-application-vnd.lotus-1-2-3.png \
	gnome-application-vnd.ms-excel.png \
	gnome-application-vnd.ms-powerpoint.png \
	gnome-application-vnd.rn-realmedia.png \
	gnome-application-vnd.stardivision.calc.png \
	gnome-application-vnd.stardivision.writer.png \
	gnome-application-vnd.stardivision.impress.png \
	gnome-application-vnd.sun.xml.calc.png \
	gnome-application-vnd.sun.xml.impress.png \
	gnome-application-vnd.sun.xml.writer.png \
	gnome-application-x-abiword.png \
	gnome-application-x-arj.png \
	gnome-application-x-backup.png \
	gnome-application-x-blender.png \
	gnome-application-x-bzip.png \
	gnome-application-x-c-header.png \
	gnome-application-x-c-source.png \
	gnome-application-x-cc-source.png \
	gnome-application-x-compress.png \
	gnome-application-x-dia-diagram.png \
	gnome-application-x-e-theme.png \
	gnome-application-x-font-sunos-news.png \
	gnome-application-x-gnome-app-info.png \
	gnome-application-x-gnumeric.png \
	gnome-application-x-gzip.png \
	gnome-application-x-jar.png \
	gnome-application-x-java-source.png \
	gnome-application-x-kde-app-info.png \
	gnome-application-x-killustrator.png \
	gnome-application-x-kpresenter.png \
	gnome-application-x-kspread.png \
	gnome-application-x-kword.png \
	gnome-application-x-ogg.png \
	gnome-application-x-php.png \
	gnome-application-x-reject.png \
	gnome-application-x-scheme-source.png \
	gnome-application-x-sql.png \
	gnome-audio-ac3.png \
	gnome-audio-basic.png \
	gnome-audio-midi.png \
	gnome-audio-mpeg.png \
	gnome-audio-ulaw.png \
	gnome-audio-x-aiff.png \
	gnome-audio-x-bmx.png \
	gnome-audio-x-mod.png \
	gnome-audio-x-pn-realaudio.png \
	gnome-audio-x-s3m.png \
	gnome-audio-x-stm.png \
	gnome-audio-x-voc.png \
	gnome-audio-x-wav.png \
	gnome-audio-x-xi.png \
	gnome-audio-x-xm.png \
	gnome-audio.png \
	gnome-compressed.png \
	gnome-font-afm.png \
	gnome-font-bdf.png \
	gnome-font-linux-psf.png \
	gnome-font-ttf.png \
	gnome-font-x-pcf.png \
	gnome-http-url.png \
	gnome-image-bmp.png \
	gnome-image-generic.png \
	gnome-image-gif.png \
	gnome-image-ief.png \
	gnome-image-jpeg.png \
	gnome-image-pbm.png \
	gnome-image-pgm.png \
	gnome-image-png.png \
	gnome-image-pnm.png \
	gnome-image-ppm.png \
	gnome-image-psd.png \
	gnome-image-ras.png \
	gnome-image-rgb.png \
	gnome-image-svg.png \
	gnome-image-tga.png \
	gnome-image-tiff.png \
	gnome-image-x-3ds.png \
	gnome-image-x-applix-graphic.png \
	gnome-image-x-lwo.png \
	gnome-image-x-lws.png \
	gnome-image-x-xfig.png \
	gnome-image-xbm.png \
	gnome-image-xcf.png \
	gnome-image-xpm.png \
	gnome-image-xwd.png \
	gnome-library.png \
	gnome-objectfile.png \
	gnome-pack-deb.png \
	gnome-pack-rpm.png \
	gnome-package.png \
	gnome-tex.png \
	gnome-text-abiword.png \
	gnome-text-html.png \
	gnome-text-plain.png \
	gnome-text-x-authors.png \
	gnome-text-x-c.png \
	gnome-text-x-copying.png \
	gnome-text-x-credits.png \
	gnome-text-x-install.png \
	gnome-text-x-makefile.png \
	gnome-text-x-readme.png \
	gnome-text-x-sql.png \
	gnome-textfile.png \
	gnome-video-mpeg.png \
	gnome-video-quicktime.png \
	gnome-video-x-ms-asf.png \
	gnome-video-x-msvideo.png \
	gnome-x-font-afm.png \
	gnome-x-troff-man.png \
	i-blockdev.png \
	i-cdrom.png \
	i-chardev.png \
	i-core.png \
	i-executable.png \
	i-fifo.png \
	i-floppy.png \
	i-harddisk.png \
	i-manual.png \
	i-music-12.png \
	i-music-24.png \
	i-music-36.png \
	i-music.png \
	i-nfs.png
	i-printer.png \
	i-regular-72.png \
	i-regular-96.png \
	i-regular.png \
	i-regular.xml \
	i-sock.png
	i-spreadsheet.png \
	i-zipdisk.png \
	$(NULL)

EXTRA_DIST = $(icon_DATA)
